fix: set app bg color to prevent visible white backgrounds

--- a/src/App.css
+++ b/src/App.css
@@ -51,6 +51,7 @@
 body {
   font-family: 'Poppins';
   color: #251c46;
+  background-color: #CA2230;
 }
 
 h1, h2, h3, h4, h5, h6 {
